--- a/css/style.less
+++ b/css/style.less
@@ -75,7 +75,7 @@
 }
 .wrapper
 {
-	width: 80%;
+	width: 65%;
 	margin: 0 auto;
 }
 .main-content
@@ -194,7 +194,48 @@
 {
 	background-color: #fff;
 	padding-top: 160px;
+	padding-bottom: 278px;
+	
+	.focus-title
+	{
+		font-size: 20px;
+		line-height: 20px;
+		font-weight: 700;
+		color: #999;
+		margin: 0;
+		padding-bottom: 19px;
+	}
+	.focus-text	
+	{
+		font-size: 16px;
+		line-height: 16px;
+		color: #999;
+		margin: 0;
+
+	}
+	.focus-icon i
+	{
+		font-size: 50px;
+		color: #fff;
+		display: inline-block;
+		padding: 25px;
+		background-color: #fc3;
+		border-top-right-radius: 50%;
+		border-top-left-radius: 5px;
+		border-bottom-left-radius: 50%;
+		border-bottom-right-radius: 50%;
+	}
+	.focus-icon
+	{
+		padding-bottom: 40px;
+	}
+	.focus-icon-bottom
+	{
+		padding-bottom: 0;
+	}
+
 }
+/*============= main-logo=========*/
 .main-logo
 {
 	padding-bottom: 125px;
@@ -208,6 +249,7 @@
 		color: #333;
 		margin: 0;
 		padding-bottom: 20px;
+		text-transform: uppercase;
 	}
 	.main-logo-title span
 	{
@@ -237,5 +279,234 @@
 		padding: 5px;
 		background-color: #fff;
 	}
+}
+/*================================*/
 
+.about
+{
+	padding-bottom: 265px;
+	background-color: #fff;
+
+
+	.about-columns
+	{
+		background-color: #f3f3f3;
+	}
+	.about-img
+	{
+		background-image: url("../img/about-img.jpg");
+		background-size: cover;
+		min-height: 499px;
+	}
+	.about-social-icon a
+	{
+		display: inline-block;
+		text-decoration: none;
+		padding-top: 430px;
+	}
+	.about-social-icon i
+	{
+		font-size: 30px;
+		padding: 20px;
+		color: #fff;
+		background-color: #ffca26;
+		margin-right: 6px;
+	}
+	.about-amazing-title1
+	{
+		font-size: 29px;
+		line-height: 36px;
+		color: #333;
+		margin: 0;
+		padding-top: 60px;
+	}
+	.about-amazing-title1 span
+	{
+		font-size: 38px;
+		line-height: 36px;
+		font-weight: 700;
+	}
+	.about-amazing-title2
+	{
+		font-size: 29px;
+		line-height: 36px;
+		color: #333;
+		margin: 0;
+		padding-bottom: 80px;
+	}
+	.about-right-title
+	{
+		font-size: 24px;
+		line-height: 30px;
+		font-weight: 700;
+		color: #333;
+		margin: 0;
+		padding-top: 60px;
+		padding-bottom: 40px;
+	}
+	.about-right-text
+	{
+		font-size: 14px;
+		line-height: 20px;
+		color: #999;
+		margin: 0;
+	}
+	.about-progress
+	{
+		padding-top: 90px;
+	}
+	.about-progress-title
+	{
+		font-size: 14px;
+		line-height: 30px;
+		color: #999;
+		margin: 0;
+		padding-top: 20px;
+	}
+	.about-progress-title:first-child
+	{
+		padding-top: 0;
+	}
+	.about-line
+	{
+		width: 100%;
+		height: 12px;
+		background-color: #999;
+	}
+	.adout-ux-line
+	{
+		width: 100%;
+		height: 12px;
+		background-color: #ffca26;
+	}
+	.adout-hml-line
+	{
+		width: 90%;
+		height: 12px;
+		background-color: #ffca26;
+	}
+	.adout-js-line
+	{
+		width: 80%;
+		height: 12px;
+		background-color: #ffca26;
+	}
+	.adout-wordpress-line
+	{
+		width: 55%;
+		height: 12px;
+		background-color: #ffca26;
+	}
+	.adout-php-line
+	{
+		width: 55%;
+		height: 12px;
+		background-color: #ffca26;
+	}
+	.about-statistic
+	{
+		border-top: 2px solid #d2d2d2;
+		border-bottom: 2px solid #d2d2d2;
+	}
+	.about-statistic-item
+	{
+		display: inline-block;
+		width: 240px;
+		border: 1px solid #ccc;
+		margin-right: -4px;
+	}
+	.about-statistic-icon
+	{
+		display: inline-block;
+		text-decoration: none;
+		padding-top: 50px;
+		padding-bottom: 40px;
+	}
+	.about-statistic-icon i
+	{
+		font-size: 60px;
+		color: #fc3;
+		display: inline-block;
+	}
+	.about-statistic-title
+	{
+		font-size: 26px;
+		line-height: 26px;
+		font-weight: 700;
+		color: #333;
+		margin: 0;
+		padding-bottom: 15px;
+	}
+	.about-statistic-text
+	{
+		font-size: 16px;
+		line-height: 16px;
+		font-style: italic;
+		font-weight: 400;
+		color: #999;
+		margin: 0;
+		padding-bottom: 45px;
+	}
+}
+/*=============================
+===============================
+=========TEAM===============
+=================================
+==================================*/
+.team
+{
+
+
+	.team-number
+	{
+		display: inline-block;
+		position: relative;
+		width: 270px;
+	}
+	.team-name
+	{
+		font-size: 39px;
+		line-height: 30px;
+		color: #333;
+		margin: 0;
+		padding-top: 50px;
+		padding-bottom: 20px;
+	}
+	.team-text
+	{
+		font-size: 14px;
+		line-height: 14px;
+		color: #ccc;
+		margin: 0;
+		text-transform: uppercase;
+		padding-bottom: 27px;
+	}
+	.team-social a
+	{
+		display: inline-block;
+		text-decoration: none;
+		margin-right: 5px;
+	}
+	.team-social i
+	{
+		font-size: 20px;
+		color: #fff;
+		padding: 10px;
+		background-color:  #ffca26;
+	}
+	.team-board
+	{
+		position: absolute;
+		left: 50%;
+		margin-left: -50%;
+		top: 50%;
+		display: inline-block;
+		width: 262px;
+		padding: 40px 0;
+		color: #fff;
+		font-size: 14px;
+		line-height: 20px;
+		background-color: rgba(0,0,0, .7);
+
+	}
 }
