--- a/css/style.less
+++ b/css/style.less
@@ -950,3 +950,469 @@
 		opacity: 0;
 	}
 }
+.process
+{
+	padding-bottom: 265px;
+	background-color: #fff;
+
+
+	.process-columns
+	{
+		background-color: #f3f3f3;
+		padding: 120px 0;
+	}
+	.process-icon
+	{
+		margin-bottom: 60px;
+	}
+	.last-icon
+	{
+		margin-bottom: 0;
+	}
+	.process-icon a
+	{
+		display: inline-block;
+		text-decoration: none;
+		position: relative;
+		z-index: 10;
+	
+	}
+	.process-icon i
+	{
+		font-size: 52px;
+		color:#fff;
+		padding: 30px;
+		background-color: #fc3;
+		border: 6px solid #fff;
+		border-top-right-radius: 50%;
+		border-top-left-radius: 5px;
+		border-bottom-left-radius: 50%;
+		border-bottom-right-radius: 50%;
+	}
+	.process-line1
+	{
+		width: 4px;
+		height: 250px;
+		background-color: #fff;
+		position: absolute;
+		top: -127%;
+    left: 50%;
+    margin-left: -3%;
+	}
+	.process-line2
+	{
+		width: 4px;
+		height: 156px;
+		background-color: #fff;
+		position: absolute;
+		top: 74%;
+    left: 50%;
+    margin-left: -3%;
+	}
+	.process-title
+	{
+		font-size: 20px;
+		line-height: 20px;
+		font-weight: 700;
+		color: #333;
+		margin: 0;
+		text-transform: uppercase;
+		padding-top: 15px;
+		padding-bottom: 20px;
+	}
+	.process-text
+	{
+		font-size: 14px;
+		line-height: 20px;
+		color: #666;
+		margin: 0;
+		width: 600px;
+	}
+}
+.pricing
+{
+	background-color: #fff;
+	padding-bottom: 265px;
+
+	.pricing-item
+	{
+		width: 318px;
+		display: inline-block;
+		vertical-align: middle;
+		border: 1px solid #333;
+		border-radius: 5px;
+	}
+	.pricing-title
+	{
+		width: 100%;
+		font-size: 22px;
+		line-height: 22px;
+		font-weight: 700;
+		color:#fff;
+		margin: 0;
+		background-color: #333;
+		padding: 38px 0;
+	}
+	.pricing-price i
+	{
+		font-size: 38px;
+		display: inline-block;
+		vertical-align: top;
+		color: #666;
+		margin-right: -10px;
+		padding-top: 5px;
+	}
+	.pricing-price 
+	{
+		font-size: 66px;
+		line-height: 60px;
+		font-weight: 700;
+		color: #666;
+		margin: 0;
+		display: inline-block;
+		vertical-align: middle;
+		padding: 25px 0;
+		border-bottom: 1px solid #666;
+		width: 100%;
+	}
+	.pricing-price span
+	{
+		font-size: 26px;
+		line-height: 26px;
+		color: #666;
+		margin: 0;
+		margin-left: -9px;
+	}
+	.pricing-text
+	{
+		font-size: 14px;
+		line-height: 40px;
+		color: #838383;
+		margin: 0;
+	}
+	.pricing-btn a
+	{
+		display: inline-block;
+		text-decoration: none;
+		color:#fff;
+		font-size: 11px;
+		line-height: 11px;
+		font-weight: 700;
+		background-color: #333;
+		padding: 16px 70px;
+		text-transform: uppercase;
+		border-radius: 5px;
+	}
+	.pricing-bottom-text
+	{
+		font-size: 14px;
+		line-height: 36px;
+		color: #838383;
+		margin: 0;
+		text-transform: uppercase;
+	}
+	.pricing-item-center
+	{
+		width: 298px;
+		vertical-align: middle;
+		border: 1px solid #ffcc33;
+		margin: 0 -4px;
+	}
+	.pricing-title-center
+	{
+		background-color: #ffcc33;
+	}
+	.pricing-item-left
+	{
+		border-right-color: transparent;
+		box-shadow:  -20px 0 20px -12px rgba(0, 0, 0, 0.5) inset;
+	}
+	.pricing-price-center
+	{
+		padding-bottom: 65px;
+		border-bottom: 1px solid #ffcc33;
+	}
+	.pricing-item-right
+	{
+		border-left-color: transparent; 
+		box-shadow: 20px 0 20px -12px rgba(0, 0, 0, 0.5) inset;
+	}
+	.pricing-text-center
+	{
+		padding-bottom: 40px;
+	}
+}
+.blog	
+{
+	padding-bottom: 180px;
+
+	.blog-columns
+	{
+		background-color: #f3f3f3;
+		padding-bottom: 110px;
+		padding-top: 120px;
+	}
+	.blog-item
+	{
+		background-color: #fff;
+		padding: 18px;
+		border: 1px solid #e5e4e4;
+		padding-bottom: 0;
+
+	}
+	.blog-img1
+	{
+		background-image: url("../img/blog-item-img1.jpg");
+		min-height: 150px;
+		width: 100%;
+		background-size: cover;
+		border: 1px solid #e5e4e4;
+	}
+	.blog-img2
+	{
+		background-image: url("../img/blog-img2.jpg");
+		min-height: 150px;
+		width: 100%;
+		background-size: cover;
+		border: 1px solid #e5e4e4;
+	}
+	.blog-img3
+	{
+		background-image: url("../img/blog-img3.jpg");
+		min-height: 150px;
+		width: 100%;
+		background-size: cover;
+		border: 1px solid #e5e4e4;
+	}
+	.blog-img4
+	{
+		background-image: url("../img/blog-img4.jpg");
+		min-height: 150px;
+		width: 100%;
+		background-size: cover;
+		border: 1px solid #e5e4e4;
+	}
+	.blog-img5
+	{
+		background-image: url("../img/blog-img5.jpg");
+		min-height: 150px;
+		width: 100%;
+		background-size: cover;
+		border: 1px solid #e5e4e4;
+	}
+	.blog-img6
+	{
+		background-image: url("../img/blog-img6.jpg");
+		min-height: 150px;
+		width: 100%;
+		background-size: cover;
+		border: 1px solid #e5e4e4;
+	}
+	.blog-data
+	{
+		font-size: 11px;
+		line-height: 11px;
+		color: #999;
+		margin: 0;
+		padding-bottom: 10px;
+		padding-left: 18px;
+
+	}
+	.blog-title
+	{
+		font-size: 16px;
+		line-height: 16px;
+		font-weight: 700;
+		color: #666;
+		margin: 0;
+		padding-bottom: 10px;
+		padding-left: 18px;
+	}
+	.blog-text
+	{
+		font-size: 14px;
+		line-height: 20px;
+		color: #999;
+		margin: 0;
+		padding-left: 18px;
+		padding-bottom: 20px;
+	}
+	.blog-navigation
+	{
+		border: 1px solid #e5e4e4;
+		border-top-color: transparent;
+		background-color: #fff;
+		padding: 6px 18px;
+		margin-bottom: 29px;
+	}
+	.blog-navigation a
+	{
+		display: inline-block;
+		text-decoration: none;
+		font-size: 13px;
+		line-height: 13px;
+		color: #fc3;
+	}
+	.blog-navigation span
+	{
+		font-size: 16px;
+		line-height: 22px;
+		color: #ccc;
+		margin: 0 5px;
+	}
+	.blog-navigation i
+	{
+		font-size: 16px;
+		color: #ff0707;
+		display: inline-block;
+		margin-right: 16px;
+	}
+	.blog-navigation .blog-btn
+	{
+		font-size: 14px;
+		line-height: 20px;
+		color: #666;
+		padding: 4px 11px;
+		background-color: #f4f4f4;
+		margin-left: 132px;
+	}
+	.blog-load-btn a
+	{
+		display: inline-block;
+		text-decoration: none;
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: 700;
+		color: #fff;
+		padding: 10px 40px;
+		background-color: #fc3;
+		border: 1px solid #e5e4e4;
+		border-radius: 5px;
+	}
+}
+.contact
+{
+	background-color: #fff;
+	padding-bottom: 100px;
+
+
+	.contact-column
+	{
+		padding-top: 85px;
+	}
+	.contact-map
+	{
+		background-color: #000;
+		background-image: url("../img/contact-map.jpg");
+		min-height: 486px;
+	}
+	.contact-icon a
+	{
+		display: inline-block;
+		text-decoration: none;
+	}
+	.contact-icon i
+	{
+		font-size: 42px;
+		display: inline-block;
+		padding: 32px;
+		background-color: #fc3;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 50%;
+		border-bottom-left-radius:50%;
+		border-bottom-right-radius: 50%;
+		color:#fff;
+	}
+	.contact-icon .fa-map-marker
+	{
+		padding: 32px 40px;
+	}
+	.contact-icon .fa-phone
+	{
+		padding:32px 37px;
+	}
+	.contact-title
+	{
+		font-size: 18px;
+		line-height: 22px;
+		font-weight: 700;
+		color: #666;
+		margin: 0;
+		padding-top: 32px;
+	}
+	.contact-addess1
+	{
+		padding-top: 11px;
+	}
+	.contact-addess2
+	{
+		padding-top: 0;
+		margin: 0;
+	}
+	input[type="text"]
+	{
+		outline: none;
+		border: none;
+		color: #999;
+		font-weight: 700;
+		padding: 12px;
+		width: 300px;
+		border: 1px solid #ccc;
+		border-radius: 5px;
+		margin-top: 85px;
+		margin-bottom: 12px;
+
+	}
+	textarea
+	{
+		width: 97%;
+		outline: none;
+		border: none;
+		color: #999;
+		font-weight: 700;
+		padding: 12px;
+		border: 1px solid #ccc;
+		border-radius: 5px;
+	}
+	input[type="submit"]
+	{
+		border: none;
+		outline: none;
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: 700;
+		color: #fff;
+		padding: 10px 40px;
+		background-color: #fc3;
+		border-radius: 5px;
+		margin-top: 12px;
+	}
+}
+.footer
+{
+	background-color: #fc3;
+	padding: 30px 0;
+
+	.footer-copyright a
+	{
+		display: inline-block;
+		text-decoration: none;
+		color: #fff;
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: 700;
+		padding: 10px 1px;
+	}
+	.footer-social a
+	{
+		display: inline-block;
+		text-decoration: none;
+	}
+	.footer-social i
+	{
+		display: inline-block;
+		color: #fff;
+		font-size: 22px;
+		padding: 10px 12px;
+	}
+}
